Google maps for campus done

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -53,20 +53,8 @@ tools:context=".Activities.EditProfileActivity">
             android:id="@+id/tv_prenume"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Prenume"
+            android:text="Nume și prenume"
             android:layout_marginStart="40dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="24dp"
-            android:textSize="18sp"
-            android:textColor="@color/colorText"
-            />
-
-        <TextView
-            android:id="@+id/tv_nume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nume"
-            android:layout_marginStart="60dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="24dp"
             android:textSize="18sp"
@@ -79,37 +67,22 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_prenume"
-        android:layout_marginTop="20dp"
         android:id="@+id/ll_prenume_edit">
 
         <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/et_nume_complet"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:text="ajfalfjaw"
-            android:editable="false"
             android:layout_marginStart="40dp"
-            android:singleLine="true"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:id="@+id/et_prenume"/>
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ajfalfjaw"
             android:editable="false"
-            android:layout_marginStart="60dp"
             android:singleLine="true"
+            android:text="ajfalfjaw"
             android:textColor="@color/colorText"
-            android:textStyle="bold"
-            android:id="@+id/et_nume"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        />
 
     </LinearLayout>
-
-
-
 
 
     <LinearLayout
@@ -137,12 +110,11 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_telefon"
-        android:layout_marginTop="20dp"
         android:id="@+id/ll_telefon_edit">
 
         <EditText
             android:id="@+id/et_telefon"
-            android:layout_width="wrap_content"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:text="070175032"
             android:layout_marginStart="40dp"
@@ -179,12 +151,11 @@ tools:context=".Activities.EditProfileActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_matricol"
-        android:layout_marginTop="20dp"
         android:id="@+id/ll_matricol_edit">
 
         <EditText
             android:id="@+id/et_matricol"
-            android:layout_width="wrap_content"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:text="MFS085308"
             android:layout_marginStart="40dp"
