--- a/app/src/main/res/layout/activity_schedules.xml
+++ b/app/src/main/res/layout/activity_schedules.xml
@@ -182,6 +182,49 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_5"
+            android:layout_below="@+id/cv_4"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_margin="8dp"
+            android:onClick="OnFacultate">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@+id/tv_4"
+                android:scaleType="centerInside"
+                android:src="@drawable/facultate"
+                android:alpha="0.7"/>
+
+            <View
+                android:id="@+id/v_5"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:alpha="0.7"
+                android:background="#e6e9ef"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_5"
+                android:layout_width="match_parent"
+                android:layout_height="150dp">
+
+                <TextView
+                    android:id="@+id/tv_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Facultate"
+                    android:maxLines="1"
+                    android:textSize="24sp"
+                    android:textAppearance="@color/colorText"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="16dp" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
         // SECRETARIAT parter, et 5, et 6, ASPC
         // IS/CTI/INFO/săli
 
