--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/sigla"
+            android:src="@drawable/sigla4"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"/>
 
