--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-        <variable
-            name="viewModel"
-            type="com.example.licenta.viewModels.LoginViewModel" />
-    </data>
-
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Activities.LoginActivity">
 
     <RelativeLayout
@@ -46,18 +38,16 @@
                 />
 
             <TextView
-            android:id="@+id/tv_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="EMAIL"
+                android:id="@+id/tv_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="EMAIL"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="24dp"
                 android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
-
-
+                android:textColor="@color/colorText"
+                />
         </LinearLayout>
 
         <EditText
@@ -75,37 +65,35 @@
             android:textStyle="bold"
             android:backgroundTint="@color/colorTextBold"
             android:layout_marginBottom="10dp"
-            app:addTextChangedListener= "@{viewModel.emailTextWatcher}"
             />
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_username"
-        android:id="@+id/ll_parola">
-
-        <ImageView
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:src="@drawable/ic_security_black_24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="20dp"
-
-            />
-
-        <TextView
-            android:id="@+id/tv_password"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PAROLĂ"
             android:layout_below="@+id/et_username"
-            android:layout_marginTop="24dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
-    </LinearLayout>
+            android:id="@+id/ll_parola">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_security_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_password"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PAROLĂ"
+                android:layout_below="@+id/et_username"
+                android:layout_marginTop="24dp"
+                android:textSize="16sp"
+                android:textColor="@color/colorText"
+                />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/et_password"
@@ -122,7 +110,6 @@
             android:textColor="@color/colorText"
             android:backgroundTint="@color/colorTextBold"
             android:layout_marginBottom="10dp"
-            app:addTextChangedListener= "@{viewModel.passwordTextWatcher}"
             />
 
         <Button
@@ -139,9 +126,7 @@
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border_blue_full"
-            android:onClick="@{viewModel::onLoginClicked}"
+            android:onClick="onSignIn"
             />
-
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
-</layout>
