--- a/app/src/main/res/layout/row_timetable.xml
+++ b/app/src/main/res/layout/row_timetable.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="@color/colorWhite"
     android:layout_marginTop="20dp">
@@ -11,7 +12,8 @@
         android:layout_height="wrap_content"
         android:text="POO"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="6dp"
         android:textColor="@color/colorText"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -23,25 +25,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ASPC 5"
-        android:layout_marginTop="4dp"
         android:layout_marginStart="30dp"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorTextSters"
         android:textSize="14sp"
         android:textStyle="italic"
         />
 
     <TextView
-        android:id="@+id/tv_ora"
-        android:layout_width="130dp"
+        android:id="@+id/tv_oraStart"
+        android:layout_toStartOf="@+id/tv_oraStop"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:text="12:00"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:background="@color/colorPurple"
+        android:padding="4dp"
+        />
+
+    <TextView
+        android:id="@+id/tv_oraStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:textAlignment="center"
         android:layout_centerVertical="true"
         android:layout_marginEnd="30dp"
-        android:text="12:00 - 14:00"
+        android:text="14:00"
         android:textColor="@color/colorWhite"
         android:textSize="18sp"
         android:textStyle="normal"
-        android:background="@color/colorPurple"
+        android:background="@color/colorTextButtonSters"
+        android:padding="4dp"
         />
+
 </RelativeLayout>
