--- a/app/src/main/res/layout/activity_orar.xml
+++ b/app/src/main/res/layout/activity_orar.xml
@@ -89,8 +89,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_timetable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/ll_zile"
             android:layout_margin="20dp"
             />
