--- a/app/src/main/res/layout/activity_orar.xml
+++ b/app/src/main/res/layout/activity_orar.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:id="@+id/ll_zile"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:text="Luni"
                 android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:textSize="16sp"
                 android:textColor="@color/colorText"
@@ -39,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="Marți"
                 android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:textSize="16sp"
@@ -52,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text="Miercuri"
                 android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:textSize="16sp"
@@ -65,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:text="Joi"
                 android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:textSize="16sp"
@@ -78,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:text="Vineri"
                 android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:textSize="16sp"
