--- a/app/src/main/res/layout/row_timetable.xml
+++ b/app/src/main/res/layout/row_timetable.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@color/colorWhite"
+    android:background="@drawable/border_blue"
     android:layout_marginTop="10dp">
 
     <TextView
@@ -12,11 +12,23 @@
         android:layout_height="wrap_content"
         android:text="POO"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="6dp"
         android:textColor="@color/colorText"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textStyle="bold"
+        />
+
+    <ImageView
+        android:id="@+id/iv_pauza"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="2dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_add_orar_black"
+        android:visibility="invisible"
         />
 
     <TextView
@@ -40,7 +52,7 @@
         android:layout_centerVertical="true"
         android:text="12:00"
         android:textColor="@color/colorWhite"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:background="@color/colorPurple"
         android:padding="4dp"
@@ -56,7 +68,7 @@
         android:layout_marginEnd="30dp"
         android:text="14:00"
         android:textColor="@color/colorWhite"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="normal"
         android:background="@color/colorTextButtonSters"
         android:padding="4dp"
