--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,107 +14,113 @@ tools:context=".Activities.SignUpActivity">
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:src="@drawable/ic_up_background"
+        android:layout_height="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp"
+        android:src="@drawable/sigla4"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         />
 
     <TextView
-        android:id="@+id/tv_username"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Utilizator"
-        android:layout_below="@+id/iv_icon"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
+        android:text="EMAIL"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
         android:textColor="@color/colorText"
         />
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_email"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_username"
+        android:layout_below="@+id/tv_email"
         android:singleLine="true"
-        android:textSize="22sp"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:textColor="@color/colorText"
+        android:textStyle="bold"
+        android:backgroundTint="@color/colorTextBold"
+        android:layout_marginBottom="10dp"
+        />
+
+    <TextView
+        android:id="@+id/tv_nume"
+        android:layout_below="@+id/et_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NUME"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorText"
+        />
+
+    <EditText
+        android:id="@+id/et_nume"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_nume"
+        android:singleLine="true"
+        android:textSize="20sp"
         android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorGray"
+        android:textStyle="bold"
+        android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
 
     <TextView
-        android:id="@+id/tv_password"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:id="@+id/tv_prenume"
+        android:layout_below="@+id/et_nume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Parolă"
-        android:layout_below="@+id/et_username"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
+        android:text="PRENUME"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
         android:textColor="@color/colorText"
         />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/et_prenume"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_password"
+        android:layout_below="@+id/tv_prenume"
         android:singleLine="true"
-        android:textSize="22sp"
-        android:inputType="textPassword"
+        android:textSize="20sp"
+        android:inputType="textPersonName"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorGray"
-        android:layout_marginBottom="10dp"
-        />
-
-    <TextView
-        android:id="@+id/tv_confirm_password"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirmare parolă"
-        android:layout_below="@+id/et_password"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorText"
-        />
-
-    <EditText
-        android:id="@+id/et_confirm_password"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_confirm_password"
-        android:singleLine="true"
-        android:textSize="22sp"
-        android:inputType="textPassword"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorGray"
+        android:textStyle="bold"
+        android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
 
     <TextView
         android:id="@+id/tv_matricol"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_below="@+id/et_prenume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Număr matricol"
-        android:layout_below="@+id/et_confirm_password"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp"
+        android:text="NUMĂR MATRICOL"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
         android:textColor="@color/colorText"
         />
 
@@ -126,28 +132,89 @@ tools:context=".Activities.SignUpActivity">
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_matricol"
         android:singleLine="true"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:padding="6dp"
         android:textColor="@color/colorText"
-        android:backgroundTint="@color/colorGray"
+        android:textStyle="bold"
+        android:backgroundTint="@color/colorTextBold"
+        android:layout_marginBottom="10dp"
+        />
+
+    <TextView
+        android:id="@+id/tv_telefon"
+        android:layout_below="@+id/et_matricol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TELEFON"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorText"
+        />
+
+    <EditText
+        android:id="@+id/et_telefon"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_telefon"
+        android:singleLine="true"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:textColor="@color/colorText"
+        android:textStyle="bold"
+        android:backgroundTint="@color/colorTextBold"
+        android:layout_marginBottom="10dp"
+        />
+
+    <TextView
+        android:id="@+id/tv_parola"
+        android:layout_below="@+id/et_telefon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PAROLĂ"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorText"
+        />
+
+    <EditText
+        android:id="@+id/et_parola"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_parola"
+        android:singleLine="true"
+        android:textSize="20sp"
+        android:password="true"
+        android:padding="6dp"
+        android:textColor="@color/colorText"
+        android:textStyle="bold"
+        android:backgroundTint="@color/colorTextBold"
         android:layout_marginBottom="10dp"
         />
 
     <Button
         android:id="@+id/btn_signin"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_matricol"
+        android:layout_below="@+id/et_parola"
         android:layout_marginTop="32dp"
-        android:textSize="24sp"
-        android:text="Creează cont"
+        android:textSize="20sp"
+        android:text="Înregistrare"
         android:padding="6dp"
         android:textAllCaps="false"
-        android:textColor="@color/colorText"
-        android:background="@drawable/border"
         android:layout_marginBottom="20dp"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/border_blue_full"
+        android:onClick="onSignUp"
         />
 
 </RelativeLayout>
