--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,20 +113,38 @@
             />
 
         <Button
-            android:id="@+id/btn_signin"
+        android:id="@+id/btn_signin"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        android:padding="6dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_password"
+        android:layout_marginTop="32dp"
+        android:textSize="20sp"
+        android:text="Autentificare"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/border_blue_full"
+        android:onClick="onSignIn"
+        />
+
+        <Button
+            android:id="@+id/btn_signup"
             android:layout_marginStart="90dp"
             android:layout_marginEnd="90dp"
             android:padding="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/et_password"
+            android:layout_below="@+id/btn_signin"
             android:layout_marginTop="32dp"
             android:textSize="20sp"
-            android:text="Autentificare"
+            android:text="Înregistrare"
             android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/border_blue_full"
-            android:onClick="onSignIn"
+            android:textColor="@color/colorTextButton"
+            android:background="@drawable/border_blue"
+            android:onClick="onSignUp"
             />
+
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
