--- a/app/src/main/res/layout/activity_add_class_timetable.xml
+++ b/app/src/main/res/layout/activity_add_class_timetable.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activities.AddClassTimetableActivity">
 
-    <RelativeLayout
+    <include layout="@layout/toolbar_with_back_button"/>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_materie"
@@ -22,21 +31,22 @@
                 android:textColor="@color/colorText"
                 />
 
-        <EditText
-            android:id="@+id/et_materie"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_materie"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
+            <EditText
+                android:id="@+id/et_materie"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_materie"
+                android:singleLine="true"
+                android:textSize="20sp"
+                android:inputType="textCapSentences"
+                android:padding="6dp"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:backgroundTint="@color/colorTextBold"
+                android:layout_marginBottom="10dp"
+                />
 
             <TextView
                 android:id="@+id/tv_sala"
@@ -51,42 +61,41 @@
                 android:textColor="@color/colorText"
                 />
 
-        <EditText
-            android:id="@+id/et_sala"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textStyle="bold"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_sala"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:inputType="textPassword"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
+            <EditText
+                android:id="@+id/et_sala"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_sala"
+                android:singleLine="true"
+                android:textSize="20sp"
+                android:inputType="textCapSentences"
+                android:padding="6dp"
+                android:textColor="@color/colorText"
+                android:backgroundTint="@color/colorTextBold"
+                android:layout_marginBottom="10dp"
+                />
 
 
-        <Button
-            android:id="@+id/btn_signin"
-            android:layout_marginStart="90dp"
-            android:layout_marginEnd="90dp"
-            android:padding="6dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/et_sala"
-            android:layout_marginTop="32dp"
-            android:textSize="20sp"
-            android:text="Adăugare"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/border_blue_full"
-            android:onClick="onAdd"
-            />
+            <Button
+                android:id="@+id/btn_signin"
+                android:layout_marginStart="90dp"
+                android:layout_marginEnd="90dp"
+                android:padding="6dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/et_sala"
+                android:layout_marginTop="32dp"
+                android:textSize="20sp"
+                android:text="Adăugare"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/border_blue_full"
+                android:onClick="onAdd"
+                />
 
-    </RelativeLayout>
-
-
-</androidx.core.widget.NestedScrollView>
+        </RelativeLayout>
+    </ScrollView>
+</LinearLayout>
