--- a/app/src/main/res/layout/activity_orar.xml
+++ b/app/src/main/res/layout/activity_orar.xml
@@ -105,9 +105,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            app:fabSize="mini"
             android:background="@drawable/border_blue_full"
             android:text="Salvare"
+            android:textAllCaps="false"
+            android:layout_centerHorizontal="true"
             android:textColor="@color/colorWhite"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="20dp"
