--- a/app/src/main/res/layout/row_timetable.xml
+++ b/app/src/main/res/layout/row_timetable.xml
@@ -21,13 +21,13 @@
 
     <ImageView
         android:id="@+id/iv_pauza"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="2dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_add_orar_black"
+        android:src="@drawable/ic_add_white"
         android:visibility="invisible"
         />
 
